service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: tea
  sessionAffinity: None
  type: NodePort
